--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,7 +11,6 @@ header {
 }
 
 /* CTA */
-
 .cta {
     margin-top: 2.5rem;
     display: flex;
@@ -20,7 +19,6 @@ header {
 }
 
 /* Socials */
-
 .header__socials {
     display: flex;
     flex-direction: column;
@@ -46,7 +44,17 @@ header {
     position: absolute;
     left: calc(50% - 11rem);
     margin-top:4rem;
-    border-radius: 12rem 12rem 0 0;
-    padding: 2rem 1.5rem 1.5rem 1.5rem;
+    border-radius: 5rem 5rem 0 0;
     overflow: hidden;
+    
+}
+
+/* scroll down */
+.scroll__down {
+    position: absolute;
+    right: -2.3rem;
+    bottom: 5rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: .9rem;
 }
