--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/bg2.png);
+    background-image: url(../src/assets/BG1.jpg);
 }
 
 /* ==== General Styles ==== */
