more work on the header, updated information and changed background to have text. Played with possibly having animations

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,16 @@ header {
     position: relative;
 }
 
+
+h3 {
+    font-family: Permanent Marker, sans-serif;
+    font-size: 2em;
+}
+
+h5 {
+    font-size: 1.3em;
+}
+
 /* CTA */
 .cta {
     margin-top: 2.5rem;
