--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* font import */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;400;500&family=Satisfy:wght@300;400;500;600&display=swap');
+ 
 
 
 *{
@@ -10,6 +11,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    background: url(/src/assets/black-felt.png)
 }
 
 :root {
@@ -41,7 +43,10 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/BG1.jpg);
+    /* background-image: url(../src/assets/BG1.jpg); */
+    margin: 0;
+    overflow: hidden;
+    background: #22314A;
 }
 
 /* ==== General Styles ==== */
@@ -51,13 +56,17 @@ body {
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5{
+h2, h3, h4, h5{
     font-weight: 500;
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-weight: 600;
+    font-family: Satisfy, serif;
+    font-size: 3.5rem;
 }
+
+
 
 section {
     margin-top: 8rem;
@@ -113,6 +122,8 @@ img {
     width: 100%;
     object-fit: contain;
 }
+
+
 
 /* ==== Medium Media Quearies ====*/
 
