--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -68,3 +68,27 @@ h5 {
     font-weight: 300;
     font-size: .9rem;
 }
+
+
+/* ==== Medium Media Quearies ====*/
+
+@media screen and (max-width: 1024px) {
+    header {
+        height: 100vh;
+    }
+    
+
+    
+}
+
+/* ==== Small Media Quearies ====*/
+
+@media screen and (max-width: 600px) {
+    header {
+        height: 100vh;
+    }
+
+    .header__socials, .scroll__down {
+        display: none;
+    }
+}
