--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    background: url(/src/assets/black-felt.png)
+    background: url(/src/assets/black-felt.png) repeat;
 }
 
 :root {
@@ -44,9 +44,7 @@ body {
     color: var(--color-white);
     line-height: 1.7;
     /* background-image: url(../src/assets/BG1.jpg); */
-    margin: 0;
-    overflow: hidden;
-    background: #22314A;
+    background: #22314A, 
 }
 
 /* ==== General Styles ==== */
@@ -65,8 +63,6 @@ h1 {
     font-family: Satisfy, serif;
     font-size: 3.5rem;
 }
-
-
 
 section {
     margin-top: 8rem;
