finished CTA, Added Nav, and added about page.

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,6 +28,18 @@ h5 {
     justify-content: center;
 }
 
+ .header_icon {
+    text-align: center;
+    background: none;
+    vertical-align: middle; 
+    font-size: 1.5rem;
+}
+
+ .btn {
+    display: flex;
+    justify-content: center;
+ }
+
 /* Socials */
 .header__socials {
     display: flex;
