--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,7 +12,7 @@ header {
 
 
 h3 {
-    font-family: Permanent Marker, sans-serif;
+    font-family: var(--primary-font);
     font-size: 2em;
 }
 
