--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,7 +1,8 @@
-.experience__contanier {
-    display: grid;
+.experience__container {
+    display: grid; 
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+     
 }
 
 .experience__container > div {
@@ -9,10 +10,30 @@
     padding: 2.4rem 5rem;
     border-radius: 2rem;
     border: 1px solid transparent;
+    transition: var(--transition);
 }
 
 .experience__container > div:hover {
     background: transparent;
-    border-color: var(--bg-primary-color);
+    border-color: var(--color-primary);
     cursor: default;
+}
+
+.experience__container > div h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--color-primary);
+}
+
+.experience__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+.experience__details {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 1rem;
 }
