--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,15 +1,17 @@
 header {
     height: 100vh;
     padding-top: 7em;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .header__container {
     text-align: center;
     height: 100%;
     position: relative;
+    background-color: var(--color-primary-variant);
+    background:url(/src/assets/bg4.jpg);
+    border-radius: 20px;
 }
-
 
 h3 {
     font-family: var(--primary-font);
@@ -26,6 +28,7 @@ h5 {
     display: flex;
     gap: 1.2rem;
     justify-content: center;
+    
 }
 
  .header_icon {
@@ -49,6 +52,8 @@ h5 {
     position: absolute;
     left: 0;
     bottom: 3rem;
+    background-color: rgba(9, 9, 9, 0.524);
+    border-radius: 20px;
 }
 
 .header__socials::after {
@@ -56,6 +61,7 @@ h5 {
     width: 2px;
     height: 2rem;
     background: var(--color-primary);
+    
 }
 
 /* Woman CTA AI Image */
@@ -79,6 +85,8 @@ h5 {
     transform: rotate(90deg);
     font-weight: 300;
     font-size: .9rem;
+    background-color: rgba(9, 9, 9, 0.524);
+    border-radius: 20px;
 }
 
 
