--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    background: url(/src/assets/black-felt.png) repeat;
+    /* background: url(/src/assets/wavesbg.png) fixed no-repeat;
+    background-size: cover;  */
 }
 
 :root {
@@ -47,7 +48,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background: #22314A, 
+    background: #22314A,     
 }
 
 /* ==== General Styles ==== */
