--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,3 +1,5 @@
+
+
 .experience__container {
     display: grid; 
     grid-template-columns: 1fr 1fr;
@@ -21,19 +23,36 @@
 
 .experience__container > div h3 {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: .5rem;
     color: var(--color-primary);
 }
 
-.experience__container {
+.experience__content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    font-size: 1.2rem;
+    gap: 1rem
 }
 
 .experience__details {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    align-items: stretch;
     justify-content: center;
     gap: 1rem;
+}
+
+.experience__details-icon {
+    display: flex;
+    margin-top: 10px;
+    color: var(--color-primary);     
+}
+
+#icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prepro {
+    margin-left: .2rem
 }
