--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,7 +52,7 @@ h5 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.8remnpm;
     position: absolute;
     left: 0;
     bottom: 3rem;
