reworking css for about me section. Paragraph is overflowing the section trying to figure out why

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -30,6 +30,8 @@ gap: 15%;
     -webkit-backdrop-filter: blur( 3px );
     border-radius: 1rem;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    display: grid;
+    place-items: center;
     
 }
 
@@ -52,7 +54,50 @@ gap: 15%;
     backdrop-filter: blur( 3px );
     -webkit-backdrop-filter: blur( 3px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );   
      
+}
+
+/* ==== Medium Media Quearies ====*/
+
+@media screen and (max-width: 1024px) {
+    #about {
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .about__container {
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
+    .about__me {
+        width: 50%;
+        margin: 2rem auto 4rem;
+    }
+
+    .about__content p {
+        margin: 1rem 0 1.5rem;
+        width: 100%;
+    }
+
+
+}
+
+/* ==== Small Media Quearies ====*/
+
+@media screen and (max-width: 600px) {
      
+    .about__me {
+        width: 65%;
+        margin: 0 auto 3rem;
+    }
+
+    .about__content {
+        text-align: center;
+    }
+
+    .about__content p {
+        margin: 1.5rem 0;
+    }
 }
