--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -37,18 +37,23 @@
     gap: 1rem;
 }
 
+.experience_details {
+    display: flex;
+    gap: 1rem;
+}
+
 
 /* ==== Medium Media Quearies ====*/
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
  
 
 
-}
+} */
 
 /* ==== Small Media Quearies ====*/
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
 
   
-}
+} */
