--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -106,19 +106,16 @@ h5 {
 
 /* ==== Medium Media Quearies ====*/
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
     header {
         height: 100vh;
     }
 
-   
     
-
-    
-}
+} */
 
 /* ==== Small Media Quearies ====*/
-
+/* 
 @media screen and (max-width: 600px) {
     header {
         height: 100vh;
@@ -127,4 +124,4 @@ h5 {
     .header__socials, .scroll__down {
         display: none;
     }
-}
+} */
