--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -10,7 +10,7 @@
 
 /* about me h2 tag "ABOUT ME" */
 #about h2 {
-    color: var(--color-bg);
+    color: var(--color-tertiary);
     font-weight: 600;
 }
 
@@ -28,7 +28,7 @@ gap: 15%;
     transform: rotate(10deg);
     display: grid;
     place-items: center;
-    background: rgba( 44, 44, 108, 0.35 );
+    background: rgba(50, 15, 116, 0.75);;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 3px );
     -webkit-backdrop-filter: blur( 3px );
@@ -47,9 +47,12 @@ gap: 15%;
     width: 105%;
     
 }
-About Me Content 
+
+/*About Me Content */
  .about__content p {
     color:var(--color-white);
+    padding: 1.5rem;
+    margin-bottom: 10px;
     border-radius: 1.5rem;
     background: rgba( 44, 44, 108, 0.35 );
     box-shadow: 0 8px 15px 0 rgba( 31, 38, 135, 0.37 );
@@ -58,6 +61,8 @@ About Me Content
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );       
 } 
+
+
  
 /* ==== Medium Media Quearies ====*/
  /* @media screen and (max-width: 1024px) {
