--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,13 +8,9 @@ header {
     text-align: center;
     height: 100%;
     position: relative;
-    padding: 2rem;
-    background: rgba( 21, 21, 51, 0.65 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 3px );
-    -webkit-backdrop-filter: blur( 3px );
+    padding: 2rem 2rem;
     border-radius: 1.5rem;
-    border: 1px solid transparent;
+    background: rgba(50, 15, 116, 0.65);
 }
 
 h3 {
@@ -24,6 +20,15 @@ h3 {
 
 h5 {
     font-size: 1.3em;
+}
+
+h6 {
+    font-size: .8em;
+    font-weight:200
+}
+
+.header__container h6 {
+    color: var(--color-primary);
 }
 
 /* CTA */
@@ -52,11 +57,11 @@ h5 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.8remnpm;
+    gap: 0.8rem;
     position: absolute;
     left: 0;
     bottom: 3rem;
-    padding: .3rem;
+    padding: .5rem;
     background: rgba( 21, 21, 51, 0.65 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 3px );
