--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -2,11 +2,28 @@
     background: var(--color-bg-variant)
 }
 
-.portfolio_item {
+ 
+.article {
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.article:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+}
+
+
+/* .portfolio__item {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 1.3rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition)
-}
+} */
+
+ 
+
+
